<resources>
    <string name="app_name">Calculator</string>
    <string name="add">+</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="decimal">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="_3">3</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="sub">-</string>
    <string name="_6">6</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="c">C</string>
    <string name="modulus">%</string>
    <string name="power">^</string>
    <string name="mplus">M+</string>
    <string name="m">M</string>
    <string name="opp">(</string>
    <string name="cpp">)</string>
    <string name="modeC">MODE</string>
    <string name="answer">Answer</string>
    <string name="delete">⬅</string>
    <string name="input">Input</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="sini">sini</string>
    <string name="cosi">cosi</string>
    <string name="tani">tani</string>
    <string name="fact">!</string>
    <string name="frac">frac</string>
    <string name="square">x²</string>
    <string name="raised">xʸ</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="root">√</string>
    <string name="nroot">ⁿ√</string>
    <string name="ncr">nCr</string>
    <string name="definiteintegral">definiteIntegral</string>
    <string name="npr">nPr</string>
    <string name="complex">Complex</string>
    <string name="comp">Comp</string>
    <string name="stat">Stat</string>
    <string name="matrix">Matrix</string>
    <string name="basen">Base-N</string>
    <string name="eqn">Eqn</string>
    <string name="plotter">Plotter</string>
    <string name="table">Table</string>
    <string name="diff">Differentiate</string>
    <string name="integ">Integrate</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="up">^</string>
    <string name="down">v</string>
    <string name="right"><![CDATA[>]]></string>
    <string name="pi">PI</string>
    <string name="e">e</string>
    <string name="rand">Rand#</string>
    <string name="var">x</string>
    <string name="pow10">x10X</string>
    <string name="_A">A</string>
    <string name="_B">B</string>
    <string name="_C">C</string>
    <string name="_D">D</string>
    <string name="_E">E</string>
    <string name="_F">F</string>
    <string name="bin">bin</string>
    <string name="oct">oct</string>
    <string name="dec">dec</string>
    <string name="hex">hex</string>
    <string name="reset">Del</string>
    <string name="deci">Dec</string>
    <string name="speech_input_phrase">Speak</string>
    <string name="stt_not_supported_message">Not supported</string>
    <string name="linear_2_variables">Linear 2 variables</string>
    <string name="linear_3_variables">linear 3 variables</string>
    <string name="linear_4_variables">linear 4 variables</string>
    <string name="quadratic">quadratic</string>
    <string name="cubic">cubic</string>
    <string name="quartic">quartic</string>
    <string name="clear">Clear</string>
    <string name="dot">.</string>
    <string name="input1">Input: </string>
</resources>
