<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="collegework.calculator2.BaseN">
    <EditText
        android:layout_width="250dp"
        android:layout_height="70dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/answer1"
        android:enabled="true"
        android:clickable="false"
        android:editable="true"
        android:focusable="false"
        android:gravity="bottom|right"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:textStyle="bold"
        android:inputType="text"
        android:hint="@string/answer"
        android:layout_below="@+id/input1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/clear" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:id="@+id/input1"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:hint="@string/input"
        android:gravity="bottom"
        android:padding="10dp"
        android:textSize="25sp"
        android:focusable="false"
        android:enabled="true"
        android:editable="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_below="@+id/answer1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout6">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bin"
            android:id="@+id/bin"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="setBin"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/oct"
            android:id="@+id/oct"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="setOct"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/dec"
            android:id="@+id/dec"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="setDec"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/hex"
            android:id="@+id/hex"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="setHex"
            android:enabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/linearLayout7"
        android:layout_below="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_C"
            android:id="@+id/twelve"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_D"
            android:id="@+id/thirteen"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_E"
            android:id="@+id/fourteen"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_F"
            android:id="@+id/fifteen"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/linearLayout8"
        android:layout_below="@+id/linearLayout7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_8"
            android:id="@+id/eight"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_9"
            android:id="@+id/nine"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_A"
            android:id="@+id/ten"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_B"
            android:id="@+id/eleven"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/linearLayout9"
        android:layout_below="@+id/linearLayout8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_4"
            android:id="@+id/four"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_5"
            android:id="@+id/five"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_6"
            android:id="@+id/six"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_7"
            android:id="@+id/seven"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:id="@+id/linearLayout10"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_0"
            android:id="@+id/zero"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_1"
            android:id="@+id/one"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_2"
            android:id="@+id/two"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/_3"
            android:id="@+id/three"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="onClick1"
            android:enabled="true" />
    </LinearLayout>

    <Button
        android:layout_width="87dp"
        android:layout_height="60dp"
        android:text="@string/reset"
        android:id="@+id/clear"
        android:layout_above="@+id/linearLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30sp"
        android:onClick="onClickD"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/deci"
        android:id="@+id/type"
        android:textSize="30sp"
        android:inputType="none"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:autoText="false"
        android:background="@android:color/transparent"
        android:enabled="true"
        android:focusable="false"
        android:focusableInTouchMode="false" />

</RelativeLayout>
