<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="collegework.calculator2.LeftFragment">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="92.5dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/comp"
            android:id="@+id/comp"
            android:layout_weight="1"
            android:textSize="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/complex"
            android:id="@+id/complex"
            android:layout_weight="1"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="92.5dp"
        android:id="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/stat"
            android:id="@+id/stat"
            android:layout_weight="1"
            android:textSize="30sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/basen"
            android:id="@+id/basen"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="switchModeBasen" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="92.5dp"
        android:id="@+id/linearLayout3"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/eqn"
            android:id="@+id/eqn"
            android:layout_weight="1"
            android:textSize="30sp"
            android:onClick="eqnswitch" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/matrix"
            android:id="@+id/matrix"
            android:layout_weight="1"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="92.5dp"
        android:id="@+id/linearLayout4"
        android:layout_below="@+id/linearLayout3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/plotter"
            android:id="@+id/plotter"
            android:layout_weight="1"
            android:textSize="25sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/table"
            android:id="@+id/table"
            android:layout_weight="1"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="92.5dp"
        android:id="@+id/linearLayout5"
        android:layout_below="@+id/linearLayout4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/diff"
            android:id="@+id/diff"
            android:layout_weight="1"
            android:textSize="18sp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/integ"
            android:id="@+id/integ"
            android:layout_weight="1"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>
